--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'public/shared/section-title', locals: { section_title: 'LBrestaurantの特徴' } %>
 <div class="lbr-dream-wrap">
   <div class="lbr-dream-content">
-    <div class="lbr-dream-title"><%= image_tag('lbr/dream-title.png', width: '296px', height: '40px') %></div>
+    <div class="lbr-dream-title"><%= image_tag('lbr/dream-title.png', class: 'dream-title-img') %></div>
     <div class="lbr-dream-text-box">
       <p class="lbr-dream-text">
         社名のLBrestaurantとは地域密着の飲食店という意味です。<br>
@@ -28,9 +28,9 @@
 </div>
 <div class="lbr-merit-wrap">
   <div class="lbr-merit-content-box">
-    <div class="lbr-merit-title"><%= image_tag('lbr/merit-title.png', width: '350px', height: '40px') %></div>
+    <div class="lbr-merit-title"><%= image_tag('lbr/merit-title.png', class: 'merit-title-img') %></div>
     <div class="lbr-merit-content">
-      <div><%= image_tag('lbr/merit-img1.png', width: '500px', height: '350px') %></div>
+      <div><%= image_tag('lbr/merit-img1.png', class: 'merit-img') %></div>
       <div class="lbr-merit-content-info lbr-merit-margin-left">
         <h2 class="lbr-merit-content-title">
           社長や役員と<br>
@@ -41,7 +41,8 @@
         </p>
       </div>
     </div>
-    <div class="lbr-merit-content">
+    <div class="lbr-merit-content reverse-flex">
+      <div><%= image_tag('lbr/staff2-interview-img2.png', class: 'merit-img') %></div>
       <div class="lbr-merit-content-info lbr-merit-margin-right">
         <h2 class="lbr-merit-content-title">
           <span class="alert-text">実力主義</span>なので<br>
@@ -51,10 +52,9 @@
           年功序列は一切ありません。サッカーで例えたら、Jリーグを目指している社会人のアマチュアリーグくらいの認識です。<span class="lbr-merit-notion-text">実力のある人をどんどん登用・抜擢していきます。</span>自分に自信のある方、ここで自分の人生変えたい!と思う方にはうってつけの環境です。本気でやれば1-2年でどこに行っても通用する実力をつけられます。
         </p>
       </div>
-      <div><%= image_tag('lbr/staff2-interview-img2.png', width: '500px', height: '350px') %></div>
     </div>
     <div class="lbr-merit-content">
-      <div><%= image_tag('lbr/merit-img2.png', width: '500px', height: '350px') %></div>
+      <div><%= image_tag('lbr/merit-img2.png', class: 'merit-img') %></div>
       <div class="lbr-merit-content-info lbr-merit-margin-left">
         <h2 class="lbr-merit-content-title">
           <span class="alert-text">１から会社を作っていく</span><br>
@@ -70,24 +70,24 @@
 <div class="lbr-img-wrap">
   <div class="swiper swiper1">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', width: '350px', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', width: '350px', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', width: '350px', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img4.png', width: '350px', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img5.png', width: '350px', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img2.png', width: '350px', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', width: '350px', height: '250px') %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img4.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img5.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img2.png', class: "swiper1-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', class: "swiper1-img") %></div>
     </div>
   </div>
   <div class="swiper swiper2">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', width: '420', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', width: '420', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', width: '420', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img4.png', width: '420', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/merit-img5.png', width: '420', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img2.png', width: '420', height: '250px') %></div>
-      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', width: '420', height: '250px') %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img1.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img2.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img3.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img4.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/merit-img5.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img2.png', class: "swiper2-img") %></div>
+      <div class="swiper-slide"><%= image_tag('lbr/staff2-interview-img1.png', class: "swiper2-img") %></div>
     </div>
   </div>
 </div>
@@ -97,7 +97,12 @@
     const mySwiper1 = new Swiper('.swiper1', {
       loop: true,
       spaceBetween: 10,
-	    slidesPerView: 4,
+	    slidesPerView: 3,
+      breakpoints: {
+        767: {
+          slidesPerView: 4
+        }
+      },
       autoplay: {
         delay: 3000,
         stopOnLastSlide: false,
@@ -110,7 +115,12 @@
     const mySwiper2 = new Swiper('.swiper2', {
       loop: true,
       spaceBetween: 10,
-	    slidesPerView: 3,
+	    slidesPerView: 2,
+      breakpoints: {
+        767: {
+          slidesPerView: 3
+        }
+      },
       autoplay: {
         delay: 3000,
         stopOnLastSlide: false,
