update/公開側のフッターのスマホデザインを完成

--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-content-box d-flex">
     <div class="footer-content1">
       <div class="footer-img">
-        <%= image_tag('footer/Icon.png', width: '241px', height: '43px') %>
+        <%= image_tag('footer/Icon.png', class: "icon-img") %>
       </div>
       <div class="footer-text1">
         株式会社LBrestaurant
