--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -586,7 +586,6 @@ ul {
   background-color: #2C2C2C;
   color: #FFFFFF;
   width: 100%;
-  height: 325px;
   font-weight: 900;
 }
 
@@ -600,11 +599,9 @@ ul {
   justify-content: space-between;
 }
 
-@media screen and (max-width: 767px) {
-  .footer-content-box {
-    max-width: none !important;
-    padding: 0 32px;
-  }
+.icon-img {
+  width: 241px;
+  height: 43px;
 }
 
 .footer-content-box2 {
@@ -612,6 +609,7 @@ ul {
   text-align: center;
   border-top: 1px solid #FFFFFF;
 }
+
 
 .footer-content1 {
   padding-top: 80px;
@@ -644,6 +642,44 @@ ul {
   padding-top: 28px;
   font-size: 16px;
 }
+
+@media screen and (max-width: 767px) {
+  .footer-content-box {
+    max-width: none !important;
+    margin: 0 32px;
+  }
+
+  .footer-content-box2 {
+    margin-top: 40px;
+  }
+
+  .icon-img {
+    width: 200px;
+    height: 36px;
+  }
+
+  .footer-content1 {
+    padding-top: 40px;
+    font-size: 14px;
+    font-weight: 900;
+    line-height: 17.38px;
+  }
+
+  .footer-content2 {
+    display: block;
+    padding-top: 40px;
+  }
+
+  .footer-link-box {
+    padding-left: 0px;
+  }
+
+  .footer-link1,
+  .footer-link2 {
+    padding: 0 0 10px;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
