--- a/app/views/public/lbr/message.html.erb
+++ b/app/views/public/lbr/message.html.erb
@@ -1,32 +1,32 @@
 <%= render partial: 'public/shared/section-title', locals: { section_title: '求職者のみなさまへ' } %>
 <div class="owner-message-wrap">
   <div class="owner-message-content">
-    <div class="owner-message-title"><%= image_tag('lbr/owner-message-title.png', width: '252px', height: '40px') %></div>
-    <div><%= image_tag('lbr/owner.png') %></div>
+    <div class="owner-message-title"><%= image_tag('lbr/owner-message-title.png', class: 'message-title-img') %></div>
+    <div><%= image_tag('lbr/owner.png', class: 'owner-img') %></div>
     <div class="owner-message-text-box">
       <p class="owner-message-text">
         はじめまして、当社のホームページをご覧いただきありがとうございます。<br>
         突然ですが、私には夢があります。<br>
         私の夢はこのブラックな飲食業界を変えることです。<br>
-        結論からいうと、独立できるレベルの人たちが弊社を通じ独立し、グループ会社のような形で各オーナー同士と<br>
+        結論からいうと、独立できるレベルの人たちが弊社を通じ独立し、グループ会社のような形で各オーナー同士と
         本社が一体となり、助け合える飲食店運営のプロ集団を作ることです。<br>
       </p>
       <p class="owner-message-text">
         私は37歳まで飲食業は未経験でした。<br>
         独立を決心し入社したものの、飲食業ではビックリの連続でした。<br>
-        安月給で、長時間労働、休日の少なさ、報われない報酬体系、評価制度などなど。前職は飲食業界の中ではホワ<br>
-        イトな方でしたが、それでも私の経験してきた仕事に比べ違いました。また同業の人の話を聞くと休みは週1が<br>
-        当たり前。安月給。そんな会社がたくさんあります。仕事自体は私にとって凄く楽しいものの、自分自身体験し<br>
-        てみて、改善すべき点がたくさんあると、物凄く痛感しました。<br>
+        安月給で、長時間労働、休日の少なさ、報われない報酬体系、評価制度などなど。前職は飲食業界の中ではホワ
+        イトな方でしたが、それでも私の経験してきた仕事に比べ違いました。また同業の人の話を聞くと休みは週1が
+        当たり前。安月給。そんな会社がたくさんあります。仕事自体は私にとって凄く楽しいものの、自分自身体験し
+        てみて、改善すべき点がたくさんあると、物凄く痛感しました。
       </p>
       <p class="owner-message-text">
         また学生にとって人気のアルバイト先である飲食店ではありますが、そのまま社員になる人は少ないです。<br>
         原因は明らかに、その店の店長にあります。<br>
         自分もあんな仕事をしたいと思えないからです。<br>
-        多くの繁盛している飲食店の店長は輝いています。しかし、過酷な労働環境、報われない報酬体系により疲弊し<br>
+        多くの繁盛している飲食店の店長は輝いています。しかし、過酷な労働環境、報われない報酬体系により疲弊し
         ていき、店長は輝きを次第に失います。すると店も輝きを失い赤字になり、潰れていく運命にあります。<br>
         こんな業界を変えたい。アルバイトが入社したいと思える会社にしたい。<br>
-        ではどうすればいいのか？それは独立できるレベルの人たちでお互いに助け合える独立集団を作ることという<br>
+        ではどうすればいいのか？それは独立できるレベルの人たちでお互いに助け合える独立集団を作ることという
         結論に至りました。
       </p>
       <p class="owner-message-text">
@@ -35,23 +35,23 @@
         また助け合える集団にするにはどうするのか。<br>
         私は高い報酬プラス人間らしい生活を送って欲しいと思っています。<br>
         そのためには、本部のみならず、独立オーナー同士が助け合える環境作りが大切です。<br>
-        人間らしい生活とは、例えば年に１−２回程度はゆっくり旅行にいける機会があったり、子供の運動会など一緒<br>
-        に見に行ってあげられたり、親の不幸には駆けつけられる、といった普通のことです。現場の飲食店の店長、も<br>
-        しくは独立オーナーはこういったことを犠牲にして仕事をしています。おそらく離婚率も高いのではないでしょ<br>
+        人間らしい生活とは、例えば年に１−２回程度はゆっくり旅行にいける機会があったり、子供の運動会など一緒
+        に見に行ってあげられたり、親の不幸には駆けつけられる、といった普通のことです。現場の飲食店の店長、も
+        しくは独立オーナーはこういったことを犠牲にして仕事をしています。おそらく離婚率も高いのではないでしょ
         うか。
       </p>
       <p class="owner-message-text">
-        こういった私がいてた営業の世界では当たり前の人間らしい生活と、高い報酬を両立できる飲食業に変えていこ<br>
+        こういった私がいてた営業の世界では当たり前の人間らしい生活と、高い報酬を両立できる飲食業に変えていこ
         うと決心し独立しました。
         このようなことは各店舗の店長が独立オーナーになり、助け合える環境を整備することで達成できます。<br>
-        例えば、A店のオーナーが家族旅行に行きたいとします。こういった時に、B店のオーナーの店から人を借りる<br>
+        例えば、A店のオーナーが家族旅行に行きたいとします。こういった時に、B店のオーナーの店から人を借りる
         ことで店を閉めずに家族旅行に行くことができます。<br>
-        もし店を閉めた場合、当社の平均で1日閉めるとマイナス5万です。これを他の店や本部から人を借りることで<br>
+        もし店を閉めた場合、当社の平均で1日閉めるとマイナス5万です。これを他の店や本部から人を借りることで
         マイナスを防ぐことができます。
       </p>
       <p class="owner-message-text">
         このように相互に助け合える飲食店運営のプロの集団をつくって行くことが当社の最大で唯一の目標です。<br>
-        あなた自身もこの飲食店運営のプロになるか、当社の理念に共感し共に歩む仲間になってもらえたらと願いま<br>
+        あなた自身もこの飲食店運営のプロになるか、当社の理念に共感し共に歩む仲間になってもらえたらと願いま
         す。ご縁があればぜひ共に仕事しましょう。
       </p>
     </div>
