--- a/app/views/public/lbr/_interview.html.erb
+++ b/app/views/public/lbr/_interview.html.erb
@@ -1,9 +1,9 @@
 <div class="interview-wrap">
   <div class="interview-content">
-    <div class="interview-title"><%= image_tag('lbr/interview-title.png', width: '340px', height: '40px') %></div>
+    <div class="interview-title"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></div>
     <div class="interview-card-box">
       <div class="interview-card">
-        <div class="staff-img"><%= image_tag('lbr/staff1.png') %></div>
+        <div class="staff-img"><%= image_tag('lbr/staff1.png', class: 'owner-img') %></div>
         <div class="staff-post">取締役</div>
         <div class="staff-name">佐藤 保<span class="staff-name-en">KOHEI SATO</span></div>
         <div class="employ-date">創業メンバー</div>
@@ -14,7 +14,7 @@
       </div>
       <%= link_to staff_interview_lbr_index_path do %>
         <div class="interview-card">
-          <div class="staff-img"><%= image_tag('lbr/staff2.png') %></div>
+          <div class="staff-img"><%= image_tag('lbr/staff2.png', class: 'owner-img') %></div>
           <div class="staff-post">野田本店店長</div>
           <div class="staff-name">松村 紘平<span class="staff-name-en">KOHEI MATSUMURA</span></div>
           <div class="employ-date">2023年3月入社</div>
@@ -25,7 +25,7 @@
         </div>
       <% end %>
       <div class="interview-card">
-        <div class="staff-img"><%= image_tag('lbr/staff3.png') %></div>
+        <div class="staff-img"><%= image_tag('lbr/staff3.png', class: 'owner-img') %></div>
         <div class="staff-post">野田スタッフ</div>
         <div class="staff-name">新田 剛史<span class="staff-name-en">TSUYOSHI NITTA</span></div>
         <div class="employ-date">2022年9月入社</div>
