--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -1956,26 +1956,30 @@ input[name="tab_item"] {
   color: #2C2C2C;
 }
 
+.interview-title-img {
+  width: 300px;
+  height: 37px;
+}
+
 .interview-section-title-img {
   margin-bottom: 6px;
 }
 
-.staff-interview-wrap {
+.staff-interview-wrap-white {
   width: 100%;
-  padding: 80px 0;
+  padding: 40px 0;
   background-color: #FFFFFF;
+}
+
+.staff-interview-wrap-gray {
+  width: 100%;
+  padding: 40px 0;
+  background-color: #F6F8FC;
 }
 
 .staff-interview-content-box {
   max-width: 1080px;
   margin: 0 auto;
-}
-
-@media screen and (max-width: 767px) {
-  .staff-interview-content-box {
-    max-width: none !important;
-    padding: 0 32px;
-  }
 }
 
 .staff-interview-margin-right {
@@ -1989,12 +1993,17 @@ input[name="tab_item"] {
 .staff-interview-content1,
 .staff-interview-content3 {
   display: flex;
-  margin-bottom: 50px;
 }
 
-.staff-interview-content2 {
+.staff-interview-content2,
+.staff-interview-content4 {
+  background-color: #F6F8FC;
   text-align: center;
-  margin-bottom: 50px;
+}
+
+.staff-show-img {
+  width: 500px;
+  height: 400px;
 }
 
 .staff-interview-content-info {
@@ -2020,6 +2029,61 @@ input[name="tab_item"] {
   font-size: 16px;
   font-weight: 500;
   line-height: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .interview-section-title-wrap {
+    width: 100%;
+    height: 300px;
+    background-size: 100% 100%;
+  }
+
+  .interview-section-title-box {
+    font-size: 18px;
+    font-weight: 700;
+    margin-left: 25px;
+  }
+
+  .interview-title-img {
+    width: 220px;
+    height: 28px;
+  }
+
+  .staff-interview-content-box {
+    max-width: none !important;
+  }
+  
+  .staff-interview-margin-left,
+  .staff-interview-margin-right {
+    margin: 10px 0 0;
+  }
+
+  .staff-interview-content1,
+  .staff-interview-content2,
+  .staff-interview-content3,
+  .staff-interview-content4 {
+    padding: 0 32px;
+  }
+
+  .staff-interview-content1,
+  .staff-interview-content3 {
+    display: block;
+  }
+
+  .staff-show-img {
+    width: 100%;
+    height: auto;
+  }
+
+  .staff-interview-content-subtitle {
+    font-size: 16px;
+    margin-bottom: 0px;
+  }
+
+  .staff-interview-content-title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
 }
 
 /*--------------------------------------------------------------
