--- a/app/views/public/lbr/staff_interview.html.erb
+++ b/app/views/public/lbr/staff_interview.html.erb
@@ -1,6 +1,6 @@
 <div class="interview-section-title-wrap">
   <div class="interview-section-title-box">
-    <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', width: '300px', height: '37px') %></h1>
+    <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></h1>
     <p>自分が成長できる</p>
     <p>楽しい職場をつくりたい</p>
     <div class="staff-post">野田本店店長</div>
@@ -8,10 +8,10 @@
     <div class="employ-date">2023年3月入社</div>
   </div>
 </div>
-<div class="staff-interview-wrap">
+<div class="staff-interview-wrap-white">
   <div class="staff-interview-content-box">
     <div class="staff-interview-content1">
-      <img><%= image_tag('lbr/staff2-interview-img1.png', width: '500px', height: '400px') %><img>
+      <div><%= image_tag('lbr/staff2-interview-img1.png', class: 'staff-show-img') %></div>
       <div class="staff-interview-content-info staff-interview-margin-left">
         <h3 class="staff-interview-content-subtitle">Question.01</h3>
         <h2 class="staff-interview-content-title">入社の経緯</h2>
@@ -20,6 +20,10 @@
         </p>
       </div>
     </div>
+  </div>
+</div>
+<div class="staff-interview-wrap-gray">
+  <div class="staff-interview-content-box">
     <div class="staff-interview-content2">
       <h3 class="staff-interview-content-subtitle">Question.02</h3>
       <h2 class="staff-interview-content-title">入社後苦労したこと</h2>
@@ -33,7 +37,12 @@
         気持ちで少しずつ困難の壁を超えてきた気がします。
       </p>
     </div>
-    <div class="staff-interview-content3">
+ </div>
+</div>
+<div class="staff-interview-wrap-white">
+  <div class="staff-interview-content-box">
+    <div class="staff-interview-content3 reverse-flex">
+      <div><%= image_tag('lbr/staff2-interview-img2.png', class: 'staff-show-img') %></div>
       <div class="staff-interview-content-info staff-interview-margin-right">
         <h3 class="staff-interview-content-subtitle">Question.03</h3>
         <h2 class="staff-interview-content-title">今後の目標について</h2>
@@ -43,9 +52,12 @@
           目標を目標で終わらせない力も身につけて日々精進の気持ちを忘れず頑張ります！
         </p>
       </div>
-      <img><%= image_tag('lbr/staff2-interview-img2.png', width: '500px', height: '400px') %><img>
     </div>
-    <div class="staff-interview-content4 text-center">
+  </div>
+</div>
+<div class="staff-interview-wrap-gray">
+  <div class="staff-interview-content-box">
+    <div class="staff-interview-content4">
       <h3 class="staff-interview-content-subtitle">Question.04</h3>
       <h2 class="staff-interview-content-title">将来入ってくるメンバーに一言</h2>
       <p class="staff-interview-content-text">
